--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                     </svg>
                     GitHub
                 </a>
+                <a href="Loot_Goblins_Onchain_PitchDeck.pdf" target="_blank" rel="noopener"
+                    class="btn btn-secondary" id="btn-pitchdeck">
+                    <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+                        <polyline points="14 2 14 8 20 8" />
+                        <line x1="8" y1="13" x2="16" y2="13" />
+                        <line x1="8" y1="17" x2="14" y2="17" />
+                    </svg>
+                    View Pitch Deck
+                </a>
             </div>
 
             <div class="hero-badge" id="hero-badge">
@@ -173,6 +183,35 @@
         </div>
     </section>
 
+    <!-- ===== DEMO VIDEO SECTION ===== -->
+    <section id="demo-video">
+        <div class="section-inner">
+            <h2 class="section-title reveal-up">Demo Video</h2>
+            <p class="section-subtitle reveal-up">
+                Watch a quick run through Loot Goblins gameplay and on-chain loot flow.
+            </p>
+            <div class="video-frame-wrap reveal-up">
+                <div class="video-frame">
+                    <iframe src="https://www.youtube.com/embed/63yat8m0OtM"
+                        title="Loot Goblins Demo Video"
+                        loading="lazy"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="hero-cta-row reveal-up">
+                <a href="https://youtu.be/63yat8m0OtM" target="_blank" rel="noopener"
+                    class="btn btn-secondary" id="btn-demo-video">
+                    Watch on YouTube
+                </a>
+                <a href="Loot_Goblins_Onchain_PitchDeck.pdf" target="_blank" rel="noopener"
+                    class="btn btn-secondary" id="btn-pitchdeck-demo">
+                    Open Pitch Deck (PDF)
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- ===== BOTTOM CTA ===== -->
     <section id="bottom-cta">
         <div class="section-inner">
@@ -195,6 +234,10 @@
                             d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                     </svg>
                     View on GitHub
+                </a>
+                <a href="Loot_Goblins_Onchain_PitchDeck.pdf" target="_blank" rel="noopener"
+                    class="btn btn-secondary" id="btn-pitchdeck-bottom">
+                    Open Pitch Deck
                 </a>
             </div>
             <div class="hero-badge reveal-up" style="margin-top: 1.5rem;">
