video replace preview

--- a/index.html
+++ b/index.html
@@ -162,31 +162,8 @@
     <section id="gameplay">
         <div class="section-inner">
             <h2 class="section-title reveal-up">
-                <img src="Assets/Images/applogo.png" alt="" class="title-icon skull-icon">
-                What It Looks Like
+                Demo Video
             </h2>
-            <p class="section-subtitle reveal-up">
-                Every run generates a fresh dungeon. Everyone's in it at the same time. Way too many goblins, never
-                enough loot.
-            </p>
-            <div class="gameplay-preview reveal-up">
-                <div class="dungeon-frame">
-                    <img src="Assets/Images/ingame_dungeon_room.png" alt="In-game dungeon room view"
-                        class="dungeon-img">
-                    <div class="dungeon-scanline"></div>
-                    <div class="dungeon-corner tl"></div>
-                    <div class="dungeon-corner tr"></div>
-                    <div class="dungeon-corner bl"></div>
-                    <div class="dungeon-corner br"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- ===== DEMO VIDEO SECTION ===== -->
-    <section id="demo-video">
-        <div class="section-inner">
-            <h2 class="section-title reveal-up">Demo Video</h2>
             <p class="section-subtitle reveal-up">
                 Watch a quick run through Loot Goblins gameplay and on-chain loot flow.
             </p>
