--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <polyline points="7 10 12 15 17 10" />
                         <line x1="12" y1="15" x2="12" y2="3" />
                     </svg>
-                    Download APK
+                    Download APK (Devnet)
                 </a>
                 <a href="https://github.com/kimo-do/SeekerDungeon" target="_blank" rel="noopener"
                     class="btn btn-secondary" id="btn-github">
@@ -202,7 +202,7 @@
                         <polyline points="7 10 12 15 17 10" />
                         <line x1="12" y1="15" x2="12" y2="3" />
                     </svg>
-                    Download APK
+                    Download APK (Devnet)
                 </a>
                 <a href="https://github.com/kimo-do/SeekerDungeon" target="_blank" rel="noopener"
                     class="btn btn-secondary" id="btn-github-bottom">
