--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </p>
             <div class="video-frame-wrap reveal-up">
                 <div class="video-frame">
-                    <iframe src="https://www.youtube.com/embed/63yat8m0OtM"
+                    <iframe src="https://www.youtube.com/embed/SHWS7msTrEI"
                         title="Loot Goblins Demo Video"
                         loading="lazy"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div class="hero-cta-row reveal-up">
-                <a href="https://youtu.be/63yat8m0OtM" target="_blank" rel="noopener"
+                <a href="https://youtu.be/SHWS7msTrEI" target="_blank" rel="noopener"
                     class="btn btn-secondary" id="btn-demo-video">
                     Watch on YouTube
                 </a>
